<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fuel Optimizer</string>
    <string name="action_settings">Preferencias</string>

    <!-- Strings para el fragment Resumen -->
    <string name="addVehicule_Boton">Añadir Vehiculo</string>
    <string name="addData_Boton">Añadir Registro</string>
    <string name="consumoMedio_Label">Consumo Medio</string>
    <string name="kmTotales_Label">Km Recorridos</string>
    <string name="gastoTotal_Label">Gasto</string>
    <string name="eficiencia_Label">Eficiencia</string>
    <string name="ultimos_Label">Últimos Repostajes</string>
    
    <!-- Strings para el fragment Mensual -->
    <string name="seleccionarVehiculo">Filtrar vehiculos</string>
    <string name="mesSiguiente">Siguiente</string>
    <string name="mesAnterior">Anterior</string>
    <string name="borrarData">Borrar Repostaje</string>
    <string name="borrarVehiculo">Borrar Vehiculo</string>
    <string name="mesNulo">MES</string>
    
    <!-- Opciones para eficiencia -->
    <string name="gasolina_Label">Gasolina</string>
	<string name="min_label">Min</string>
	<string name="max_label">Max</string>    
    <!-- String complementarios -->
	<string name="stringVacio"></string>
</resources>