<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <!-- Creamos el Spinner -->

        <Spinner
            android:id="@+id/elegir_Vehiculo_Spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" />

        <LinearLayout
            android:id="@+id/body_Layout"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/elegir_Vehiculo_Spinner"
            android:orientation="vertical" >

            <View style="@style/Divider" />

            <!-- TableLayout Resumen Total -->

            <TableLayout
                android:id="@+id/table_Consumo_Total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="10dp"
                android:stretchColumns="*" >

                <!-- Consumo Medio -->

                <TableRow
                    android:id="@+id/tablerow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.35"
                        android:text="@string/consumoMedio_Label"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/Negro" />

                    <TextView
                        android:id="@+id/consumo_Anual_Label"
                        style="@style/Resultado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/stringVacio" />
                </TableRow>
                <!-- Fin Consumo Medio -->


                <!-- Km Recorridos -->

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.35"
                        android:text="@string/kmTotales_Label"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/km_Recorridos_Label"
                        style="@style/Resultado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/stringVacio" />
                </TableRow>
                <!-- Fin Km Recorridos -->


                <!-- Gastos Totales -->

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.35"
                        android:text="@string/gastoTotal_Label"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/gasto_Total_Label"
                        style="@style/Resultado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/stringVacio" />
                </TableRow>
                <!-- Fin Gastos Totales -->

            </TableLayout>
            <!-- FIN TableLayout Resumen Total -->

            <View style="@style/Divider" />

            <!-- INICIO TABLE MAS EFICIENTES -->

            <TableLayout
                android:id="@+id/table_Eficiencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:stretchColumns="*" >

                <TableRow
                    android:id="@+id/tableRow6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eficiencia_Label"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/gasolina_Label"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/eficiencia_Min_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/min_label"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="15sp"
                        android:typeface="monospace" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stringVacio"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/eficiencia_Max_Label"
                        style="@style/Resultado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/max_label" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                </TableRow>
            </TableLayout>
            <!-- FIN TABLE MAS EFICIENTES -->

            <View style="@style/Divider" />

            <!-- INICIO Ultimos_repostajes -->

            <TableLayout
                android:id="@+id/Table_Repostaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:stretchColumns="*" >

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ultimos_Label"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/ultimosRepostajes_Label"
                        style="@style/Resultado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="EJEMPLO" />
                </TableRow>
            </TableLayout>
            <!-- FIN Ultimos_repostajes -->
            
        </LinearLayout>

        <!-- BOTONES PARA AÑADIR DATOS -->

        <View
            style="@style/Divider"
            android:layout_above="@+id/add_Data_Button" />

        <Button
            android:id="@+id/add_Data_Button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/add_vehicule_button"
            android:text="@string/addVehicule_Boton" />

        <Button
            android:id="@+id/add_vehicule_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/addData_Boton" />
    </RelativeLayout>

</ScrollView>